--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-database="root:123456@tcp(192.168.8.204:3308)/new_manage?charset=utf8&parseTime=True&loc=Local"
+database="root:123456@tcp(192.168.8.204:3308)/godly?charset=utf8&parseTime=True&loc=Local"
 database.MaxIdleConns=20
 database.MaxOpenConns=100
 
